@@ -3,7 +3,8 @@
 /*
 
 This shows a cursory list of running VMs managed by libvirt and their stats. 
-Requires libvirt php extension (http://libvirt.org/php/)
+Requires libvirt php extension (http://libvirt.org/php/):
+  sudo apt-get install php5-libvirt-php
 
 To enable this extension, add/tweak the following to your config.inc.php
 
